@@ -1,12 +1,17 @@
 package classes;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
+import proficiency.Proficiency;
+import proficiency.Skill;
+
 public class Warlock extends Classes {
 
-    public Warlock(String className, String fightingStyle, String specialization, int hitPoints, List<String> abilities) {
-        super(className, fightingStyle, specialization, hitPoints, abilities);
+    public Warlock(String className, String fightingStyle, String specialization, List<String> features, Proficiency classProficiency, int hitDice) {
+        super(className, specialization, features, classProficiency, hitDice);
     }
 
     public static String getRandomFightingStyle(int level) {
@@ -26,19 +31,62 @@ public class Warlock extends Classes {
         return Warlock.Specialization[index];
     }
     
-    public static List<String> getRandomAbilities() {
-        return List.of(Warlock.Abilities);
-    }
-    
-    public static int calculateRandomHitPoints(int level) {
-        Random random = new Random();
-        int additionalHitPoints = 0;
-    
-        for (int i = 2; i <= level; i++) {
-            additionalHitPoints += random.nextInt(8) + 1;
+    public static List<String> getRandomFeatures(int level, String specialization) {
+        List<String[]> featureList = null;
+
+        if ("The Archfey".equals(specialization)) {
+            featureList = Arrays.asList(Arrays.copyOfRange(FeaturesArchfey, 0, level));
+        } else if ("The Fiend".equals(specialization)) {
+            featureList = Arrays.asList(Arrays.copyOfRange(FeaturesFiend, 0, level));
+        } else if ("The Great Old One".equals(specialization)) {
+            featureList = Arrays.asList(Arrays.copyOfRange(FeaturesGreatOldOne, 0, level));
         }
-    
-        return 8 + additionalHitPoints;
+
+        return getFeaturesList(featureList);
+    }
+
+    private static List<String> getFeaturesList(List<String[]> featureList) {
+        List<String> result = new ArrayList<>();
+        if (featureList != null) {
+            for (String[] sublist : featureList) {
+                result.addAll(Arrays.asList(sublist));
+            }
+        }
+        return result;
+    }
+
+    public static int getWarlockHitDice() {
+        return 8;
+    }
+
+    // Proficiencies
+    public static Proficiency getProficiency() {
+        Proficiency classProficiency = new Proficiency();
+
+        ArrayList<String> armor = new ArrayList<>();
+        armor.add("Light Armor");
+
+        ArrayList<String> weapons = new ArrayList<>();
+        weapons.add("Simple Weapons");
+
+        ArrayList<String> savingThrows = new ArrayList<>();
+        savingThrows.add("Wisdom");
+        savingThrows.add("Charisma");
+
+        ArrayList<Skill> skills = new ArrayList<>();
+        while (skills.size() < 2) {
+            Skill newSkill = classProficiency.RandomSkillWarlock();
+            if (!skills.contains(newSkill)) {
+                skills.add(newSkill);
+            }
+        }
+
+        classProficiency.setArmor(armor);
+        classProficiency.setWeapon(weapons);
+        classProficiency.setSavingThrow(savingThrows);
+        classProficiency.setSkill(skills);
+
+        return classProficiency;
     }
 
     // Pact Boon
@@ -55,10 +103,73 @@ public class Warlock extends Classes {
         "The Great Old One"
     };
 
-    private static String[] Abilities = {
-        "ability1",
-        "ability2",
-        "ability3"
+    private static String[][] FeaturesArchfey = {
+        {"Pact Magic", "Expanded Spell List", "Fey Presence"}, //patron feature
+        {"Eldritch Invocations"},
+        {"Pact Boon"},
+        {}, //ability score improvement
+        {},
+        {"Misty Escape"}, //patron feature
+        {},
+        {}, //ability score improvement
+        {},
+        {"Beguiling Defenses"}, //patron feature
+        {"Mystic Arcanum (6th level)"},
+        {}, //ability score improvement
+        {"Mystic Arcanum (7th level)"}, 
+        {"Dark Delirium"}, //patron feature
+        {"Mystic Arcanum (8th level)"},
+        {}, //ability score improvement
+        {"Mystic Arcanum (9th level)"},
+        {},
+        {}, //ability score improvement
+        {"Eldritch Master"},
+    };
+
+    private static String[][] FeaturesFiend = {
+        {"Pact Magic", "Expanded Spell List", "Dark One's Blessing"}, //patron feature
+        {"Eldritch Invocations"},
+        {"Pact Boon"},
+        {}, //ability score improvement
+        {},
+        {"Dark One's Own Luck"}, //patron feature
+        {},
+        {}, //ability score improvement
+        {},
+        {"Fiendish Resilience"}, //patron feature
+        {"Mystic Arcanum (6th level)"},
+        {}, //ability score improvement
+        {"Mystic Arcanum (7th level)"}, 
+        {"Hurl Through Hell"}, //patron feature
+        {"Mystic Arcanum (8th level)"},
+        {}, //ability score improvement
+        {"Mystic Arcanum (9th level)"},
+        {},
+        {}, //ability score improvement
+        {"Eldritch Master"},
+    };
+
+    private static String[][] FeaturesGreatOldOne = {
+        {"Pact Magic", "Expanded Spell List", "Awakened Mind"}, //patron feature
+        {"Eldritch Invocations"},
+        {"Pact Boon"},
+        {}, //ability score improvement
+        {},
+        {"Entropic Ward"}, //patron feature
+        {},
+        {}, //ability score improvement
+        {},
+        {"Thought Shield"}, //patron feature
+        {"Mystic Arcanum (6th level)"},
+        {}, //ability score improvement
+        {"Mystic Arcanum (7th level)"}, 
+        {"Create Thrall"}, //patron feature
+        {"Mystic Arcanum (8th level)"},
+        {}, //ability score improvement
+        {"Mystic Arcanum (9th level)"},
+        {},
+        {}, //ability score improvement
+        {"Eldritch Master"},
     };
 
 }
